updated portfolio items

--- a/index.html
+++ b/index.html
@@ -98,6 +98,26 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
+            <h3 class="mb-0">uFlu?</h3>
+            <!-- <div class="subheading mb-3">Shout! Media Productions</div> -->
+            <p>Node, MySQL, Express, Handlebars.js, Bootstrap, JQuery, Google Maps API, HTML5, CSS, and QR Code.
+              <span>&nbsp &nbsp· <a href="https://immense-earth-35824.herokuapp.com/" target="_blank">live</a> · <a href="https://github.com/DasBarenz/proj2" target="_blank">github</a> · </span></p>
+            </p>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Burger Time!</h3>
+            <!-- <div class="subheading mb-3">Shout! Media Productions</div> -->
+            <p>Heroku, JawsDB, JavaScript, MySQL, Node, Express, Handlebars.js, and ORM.
+              <span>&nbsp &nbsp· <a href="https://mighty-caverns-60614.herokuapp.com/" target="_blank">live</a> · <a href="https://github.com/DasBarenz/burger" target="_blank">github</a> · </span></p>
+            </p>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
             <h3 class="mb-0">Train Schedule</h3>
             <!-- <div class="subheading mb-3">Shout! Media Productions</div> -->
             <p>Firebase, JavaScript, JQuery, HTML5, Bootstrap, CSS.
@@ -177,9 +197,9 @@
           <!-- <li class="list-inline-item">
               <i class="fab fa-angular"></i>
             </li> -->
-          <!-- <li class="list-inline-item">
+          <li class="list-inline-item">
               <i class="fab fa-react"></i>
-            </li> -->
+            </li>
           <li class="list-inline-item">
             <i class="fab fa-node-js"></i>
           </li>
@@ -198,9 +218,9 @@
           <!-- <li class="list-inline-item">
               <i class="fab fa-grunt"></i>
             </li> -->
-          <!-- <li class="list-inline-item">
+          <li class="list-inline-item">
               <i class="fab fa-npm"></i>
-            </li> -->
+            </li>
         </ul>
 
         <!-- <div class="subheading mb-3">Workflow</div>
